; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_pmcraid.c_pmcraid_change_queue_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_pmcraid.c_pmcraid_change_queue_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_device = type { i32, i64, i64 }
%struct.pmcraid_resource_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_device*, i32)* @pmcraid_change_queue_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmcraid_change_queue_type(%struct.scsi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.scsi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pmcraid_resource_entry*, align 8
  store %struct.scsi_device* %0, %struct.scsi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %7 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %6, i32 0, i32 2
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.pmcraid_resource_entry*
  store %struct.pmcraid_resource_entry* %9, %struct.pmcraid_resource_entry** %5, align 8
  %10 = load %struct.pmcraid_resource_entry*, %struct.pmcraid_resource_entry** %5, align 8
  %11 = icmp ne %struct.pmcraid_resource_entry* %10, null
  br i1 %11, label %12, label %48

12:                                               ; preds = %2
  %13 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %14 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %48

17:                                               ; preds = %12
  %18 = load %struct.pmcraid_resource_entry*, %struct.pmcraid_resource_entry** %5, align 8
  %19 = getelementptr inbounds %struct.pmcraid_resource_entry, %struct.pmcraid_resource_entry* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @RES_IS_GSCSI(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %29, label %23

23:                                               ; preds = %17
  %24 = load %struct.pmcraid_resource_entry*, %struct.pmcraid_resource_entry** %5, align 8
  %25 = getelementptr inbounds %struct.pmcraid_resource_entry, %struct.pmcraid_resource_entry* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @RES_IS_VSET(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %48

29:                                               ; preds = %23, %17
  %30 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @scsi_set_tag_type(%struct.scsi_device* %30, i32 %31)
  %33 = load i32, i32* %4, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %29
  %36 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %37 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %38 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @scsi_activate_tcq(%struct.scsi_device* %36, i32 %39)
  br label %47

41:                                               ; preds = %29
  %42 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %43 = load %struct.scsi_device*, %struct.scsi_device** %3, align 8
  %44 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @scsi_deactivate_tcq(%struct.scsi_device* %42, i32 %45)
  br label %47

47:                                               ; preds = %41, %35
  br label %49

48:                                               ; preds = %23, %12, %2
  store i32 0, i32* %4, align 4
  br label %49

49:                                               ; preds = %48, %47
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i64 @RES_IS_GSCSI(i32) #1

declare dso_local i64 @RES_IS_VSET(i32) #1

declare dso_local i32 @scsi_set_tag_type(%struct.scsi_device*, i32) #1

declare dso_local i32 @scsi_activate_tcq(%struct.scsi_device*, i32) #1

declare dso_local i32 @scsi_deactivate_tcq(%struct.scsi_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
